--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/task-management.svg" />
+    <link rel="icon" href="/task-management-icon.avif" type="image/avif" />
+    <link rel="icon" href="/task-management-icon.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>smart-task-dashboard</title>
   </head>
